# soundgood-database-app

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
controller/: Soundgood.cpp  Soundgood.h
dto/: ActiveRental.cpp  ActiveRental.h  Rental.cpp  Rental.h  RentalInstrument.cpp  RentalInstrument.h  StudentPersonDTO.cpp  StudentPersonDTO.h
google_test/: CMakeLists.txt
integration/: DatabaseError.h  DbHandler.cpp  DbHandler.h  InvalidUsernameError.h
model/: InstrumentNotAvailableError.h  NumberAllowedRentalsExceededError.h  RentalManager.cpp  RentalManager.h  RentalNotActiveError.h  StudentNotEnrolledError.h
scipts/: add_database_views.sql  initiate_database.sql  populate_database_with_test_data.sql
scripts/: initiate_database.sql
test/: test.cpp  test.h
view/: CommandLineView.cpp  CommandLineView.h  ViewSession.cpp  ViewSession.h
